# aggressor-wrappers

./: .gitignore  CHANGELOG.md  COMMITMESSAGE.txt  LICENSE  MANIFEST.in  README.md  aggressor-wrappers.py  config.cfg  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_conda_env.sh
.github/workflows/: ci.yml
legacy/: README.md  appnn_converter.R  arch_cross_pasta_aggreprot_waltz_parser.ipynb  parse_predictor.py  pasta_pipeline.py  path_converter.py
legacy/api/: PASTA 2.0.py  aggreprot.py  cross_candy.py
scripts/: build_all_table.py  calibrate_weights.py
src/: __init__.py  __main__.py  paths.py
src/batch/: __init__.py  logging.py  pipeline 2.py  pipeline.py  resume.py  scheduler.py
src/cli/: __init__.py  app.py  batch.py  merge.py  parse.py  run.py  widemerge.py
src/core/: __init__.py  amyloscope_export.py  backend.py  cache.py  compat.py  config.py  fasta.py  inputs.py  merge 2.py  merge.py  metascore.py  metascore_plugins.py  schema 2.py  schema.py  validate.py
src/predictors/: __init__.py  aggreprot.py  amylodeep.py  amylogram.py  amylogram_predict.R  appnn.py  archcandy.py  archcandy_local.py  base.py  crossbeta.py  crossbeta_local.py  pasta.py  path.py  registry.py  tango.py  waltz.py
src/runners/: __init__.py  (+14 more)
tests/: helpers.py  test_aggreprot_runner.py  test_amyloscope_export.py  test_archcandy_runner.py  test_backend.py  test_batch.py  test_cache.py  test_cli_help.py  test_compat_and_crossbeta.py  test_config_presets.py  test_crossbeta_runner.py  test_fidelity_aggreprot.py  test_fidelity_archcandy.py  test_golden.py  test_local_tools.py  test_logging.py  test_metascore_plugins.py  test_parsers.py  test_pasta_runner.py  test_path_vendor.py  test_resume.py  test_runners.py  test_scheduler.py  test_waltz_runner.py
tools/: check_homoglyphs.py
(+8 files in other folders)
